# intmax2-mining-cli

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  build_mac.sh  config.holesky.toml  config.localnet.toml  config.mainnet.toml  config.sepolia.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust-build.yml
abi/: Int1.json  Int1L.json  MinterV1.json  MinterV1L.json
config/: config.base-sepolia.toml  config.base.toml  config.holesky.toml  config.mainnet.toml
docs/: add_token_to_wallet.md  alchemy.md  alchemy_guide.md  base.md  base_mainnet_quickstart.md  base_sepolia_quickstart.md  developer.md  developer_docs.md  faq.md  holesky.md  infura-guide.md  infura.md  mainnet-quickstart.md  migrate.md  quickstart.md  sepolia.md  terms.md  terms_of_use.md  windows.md  windows_guide.md
src/: constants.rs  main.rs
src/cli/: accounts_status.rs  availability.rs  balance_validation.rs  configure.rs  console.rs  export_deposit_accounts.rs  interactive.rs  load_env.rs  mod.rs  mode_selection.rs  status.rs  term_of_use.rs  user_settings.rs
src/external_api/: github.rs  mod.rs  query.rs  raw_github.rs
src/external_api/contracts/: convert.rs  error.rs  events.rs  handlers.rs  int1.rs  minter.rs  mod.rs  token.rs  utils.rs
src/external_api/graph/: client.rs  error.rs
src/external_api/intmax/: availability.rs  circulation.rs  error.rs  event.rs  gas_estimation.rs  gnark.rs  header.rs  mod.rs  withdrawal.rs
src/services/: assets_status.rs  balance_transfer.rs  contracts.rs  gas_validation.rs  mod.rs  sync.rs  utils.rs
src/services/claim/: claim.rs  contract.rs  mod.rs  temp.rs  witness_generation.rs
src/services/mining/: cancel.rs  deposit.rs  deterministic_sleep.rs  mod.rs
src/services/mining/withdrawal/: mod.rs  temp.rs  witness_generation.rs
src/state/: key.rs  keys.rs  mod.rs  mode.rs  private_data.rs  prover.rs  state.rs
src/test/: deposit_tree.rs  mod.rs
src/utils/: bin_parser.rs  cache.rs  config.rs  deposit_hash_tree.rs  derive_key.rs  eligible_tree_with_map.rs  encryption.rs  env_config.rs  env_validation.rs  errors.rs  file.rs  mod.rs  network.rs  retry.rs  salt.rs  time.rs  update.rs
v1-cli/: .gitignore  Cargo.toml  README.md  config.localnet.toml  config.sepolia.toml  config.testnet.toml
v1-cli/abi/: Int1.json  MinterV1.json
v1-cli/data_/: user_settings.localnet.json  user_settings.testnet.json
v1-cli/src/: config.rs  main.rs  private_data.rs
v1-cli/src/cli/: availability.rs  console.rs  mod.rs  private_data.rs  user_settings.rs
v1-cli/src/external_api/: github.rs
v1-cli/src/external_api/contracts/: events.rs  int1.rs  minter.rs  mod.rs  utils.rs
v1-cli/src/external_api/intmax/: availability.rs  gnark.rs  withdrawal.rs
v1-cli/src/services/: assets_status.rs  contracts.rs  mod.rs  observer.rs  sync.rs
v1-cli/src/services/claim/: claim.rs  claim_task.rs  contract.rs  determin.rs  mod.rs  temp.rs  witness_generation.rs
v1-cli/src/services/mining/: cancel.rs  deposit.rs  determin.rs  mod.rs
v1-cli/src/services/mining/withdrawal/: mod.rs  temp.rs  witness_generation.rs
v1-cli/src/state/: mod.rs  prover.rs  state.rs
v1-cli/src/test/: mod.rs
v1-cli/src/utils/: bin_parser.rs  config.rs  eligible_tree_with_map.rs  file.rs  mod.rs  network.rs
