[package]
name = "mining-cli"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
bincode = "1.3.3"
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
intmax2-zkp = {git ="https://github.com/InternetMaximalism/intmax2-zkp", branch = "dev"}
mining_circuit_v1 ={git ="https://github.com/InternetMaximalism/intmax2-mining.git"}
num-bigint = "0.4.6"
serde = {version="1.0.210", features = ["derive"]}
serde_json = "1.0.128"
config = "0.13"
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
rpassword = "5.0"
aes-gcm = "0.9"
sha3 = "0.10.0"
dialoguer = "0.11.0"
console = "0.15.8"
rand = "0.8.5"
simplelog = "0.12.2"
log = "0.4.22"
chrono = "0.4.38"
regex = "1.10.6"
dir = "0.1.2"
dirs = "5.0.1"
clap = { version = "4.5.18", features = ["derive"] }
dotenv = "0.15.0"
hex = "0.4.3"
thiserror = "1.0.64"
strum = "0.26.3"
strum_macros = "0.26.4"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
self_update = {version="0.41.0", features=["archive-zip", "compression-zip-deflate"]}
rand_chacha = "0.3.1"

