[package]
name = "mining-cli"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
plonky2 = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "intmax2-dev" }
intmax2-zkp = { git = "https://github.com/InternetMaximalism/intmax2-zkp", branch = "dev" }
mining_circuit_v1 = { git = "https://github.com/InternetMaximalism/intmax2-mining.git" }
num-bigint = "0.4.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
config = "0.15.11"
reqwest = { version = "0.12.17", features = ["json"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.9"
sha3 = "0.10.0"
dialoguer = "0.11.0"
console = "0.15.11"
rand = "0.8.5"
simplelog = "0.12.2"
log = "0.4.27"
chrono = "0.4.41"
regex = "1.11.1"
dirs = "5.0.1"
clap = { version = "4.5.39", features = ["derive"] }
dotenv = "0.15.0"
hex = "0.4.3"
thiserror = "2.0.2"
strum = "0.26.3"
strum_macros = "0.27.1"
self_update = { version = "0.42.0", features = [
    "archive-zip",
    "compression-zip-deflate",
] }
rand_chacha = "0.3.1"
alloy = { version = "1.0.8", features = ["rand"] }
tower = "0.5.2"
serde_qs = "0.15.0"
futures = "0.3.31"
serde_with = "3.12.0"
env_logger = "0.11.8"
