[package]
name = "mining-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
bincode = "1.3.3"
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
intmax2-zkp = {git ="https://github.com/InternetMaximalism/intmax2-zkp", branch = "dev"}
mining_circuit = {path="../mining-circuit/v1"}
num-bigint = "0.4.6"
serde = {version="1.0.210", features = ["derive"]}
serde_json = "1.0.128"
config = "0.13"
reqwest = { version = "0.11", features = ["json"] }
ethers = "1.0"
tokio = { version = "1", features = ["full"] }
rpassword = "5.0"
aes-gcm = "0.9"
sha3 = "0.10.0"
dialoguer = "0.11.0"
console = "0.15.8"
rand = "0.8.5"
simplelog = "0.12.2"
log = "0.4.22"
chrono = "0.4.38"
regex = "1.10.6"
